--- a/index.html
+++ b/index.html
@@ -3,35 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="https://binary-studio-academy.github.io/stage-2/assets/stylesheets/base.css">
-    <title>Résumé by SpongeBob SquarePants</title>
+    <title>Résumé</title>
   </head>
   <body>
     <main>
       <article>
-        <div class="page" style="border-color: rgb(16, 202, 226);">
+        <div class="page" style="border-color: midnightblue;">
           <div class="stackable grid">
             <div class="row">
               <div class="three wide center aligned column">
-                <img src="avatar.png" width="175" height="160" >
+                <!-- Avatar -->
               </div>
               <div class="thirteen wide column">
                 <div class="stackable grid">
                   <div class="sixteen wide column">
-                    <p><b><font size="5" color="#10cae2" face="serif">Résumé</b><sup><i>by SpongeBob SquarePants</i></sup></font></p>
-                    <i>Oh...ehm...hi! I'm simple guy from a little city named Bikini Bottom who was able to become a cinema global star among adults and kids. During my career I have been actor...and cooker...and singer...and dancer...and...JELLYFISH CATHER! Oh, I love it! Call me and we will definitely become <s>friends</s> coworkers!</i>
+                    <!-- Name, job, contacts -->
+                  </div>
+                  <div class="sixteen wide mobile only column">
+                    <div class="divider"></div>
                   </div>
                   <div class="sixteen wide column">
-                    <a href="https://instagram.com/spongebob?igshid=gwm0pvgj06xe"><img src="instagram.png" width="25" height="25" ></a>
-                    <a href="https://m.facebook.com/spongebob"><img src="facebook.png" width="25" height="25" ></a>
-                    <a href="https://twitter.com/spongebob"><img src="twitter.png" width="25" height="25" ></a>
-                    <a href="https://m.youtube.com/channel/UCx27Pkk8plpiosF14qXq-VA"><img src="youtube.png" width="25" height="25" ></a>
+                    <!-- Intro -->
                   </div>
                 </div>
               </div>
             </div>
             <div class="row">
               <div class="sixteen wide column">
-                <div class="divider"></div>
+                <div class="fat divider"></div>
               </div>
             </div>
             <div class="row">
